--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h1{
     background-color: #ec9440;
     width: 566px;
     height: 90px;
-    left: 200px;
+    left: 100px;
     position: relative;
     display: flex;
     justify-content: center;
@@ -98,10 +98,13 @@ h3{
     font-family: 'Montserrat', sans-serif;
 }
 
-.triangulo img{
-    display: flex;
-    justify-content: ;
-    width: 1277px;
-    height: 667;
+.login > h2{
+position: relative;
+font-family: 'Montserrat', sans-serif;
+justify-content: flex-end;
+right: 12px;
 }
+
+
+
 
