--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-ul, ol, LI{
+ul, ol, li{
 list-style: none;
 }
 
@@ -74,7 +74,7 @@ li:hover{
 .nav-2{
     height: 50px;
     width: 110px;
-    left: 1080px;
+    left: 1060px;
     background-color: #ec9440;
     border-radius: 50px;
     color: #ffffff;
@@ -83,6 +83,7 @@ li:hover{
     display: flex;
     justify-content: center;
     align-items: center;
+
       
 }
 
@@ -105,8 +106,13 @@ h3{
 position: relative;
 font-family: 'Montserrat', sans-serif;
 justify-content: flex-end;
-left: 800px;
+left: 780px;
 }
+
+.login h2{
+    font-size:16px;
+}
+
 
 .lupa img{
     width: 24px;
@@ -114,7 +120,7 @@ left: 800px;
 }
 
 .lupa{
-    left: 790px;
+    left: 750px;
     position: relative;
     top: 2px;
 }
