--- a/style.css
+++ b/style.css
@@ -4,34 +4,36 @@
     box-sizing: border-box;
 }
 
-ul, ol, li{
-list-style: none;
+ul,
+ol,
+li {
+    list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-    
-body{
-    
+
+body {
+
     background-color: #ffcc80;
     height: 100%;
     width: 100%;
 }
 
-header{
+header {
     display: flex;
     justify-content: flex;
     align-items: center;
     height: 90px;
     width: 100vw;
     margin-top: 12px;
-   
-    
+
+
 }
 
-h1{
+h1 {
     position: relative;
     color: #5a0203;
     font-family: 'Montserrat', sans-serif;
@@ -40,7 +42,11 @@ h1{
     margin-left: 30px;
 }
 
-.nav{
+h1:hover {
+    cursor: pointer;
+}
+
+.nav {
     border-radius: 50px;
     background-color: #ec9440;
     width: 566px;
@@ -53,11 +59,11 @@ h1{
     font-family: 'Montserrat', sans-serif;
     color: #ffffff;
     align-items: center;
- 
+
 
 }
 
-li:hover{
+li:hover {
     color: #5a0203;
     font-style: italic;
     font-weight: bold;
@@ -67,7 +73,7 @@ li:hover{
 }
 
 /*botão sing up*/
-.nav-2{
+.nav-2 {
     height: 50px;
     width: 110px;
     left: 1060px;
@@ -80,88 +86,157 @@ li:hover{
     justify-content: center;
     align-items: center;
 
-      
+
 }
 
-.nav-2 h2{
-    font-size: 16px; 
+.nav-2 h2 {
+    font-size: 16px;
     font-weight: lighter;
 }
 
-.nav-2:hover{
+.nav-2:hover {
     text-decoration: underline;
     cursor: pointer;
 }
 
-h3{
-    color:#5A0203;
+h3 {
+    color: #5A0203;
     font-family: 'Montserrat', sans-serif;
 }
 
-.login{
-position: relative;
-font-family: 'Montserrat', sans-serif;
-justify-content: flex-end;
-left: 780px;
+.login {
+    position: relative;
+    font-family: 'Montserrat', sans-serif;
+    justify-content: flex-end;
+    left: 780px;
 }
-.login h2{
-    font-size:1rem;
+
+.login h2 {
+    font-size: 1rem;
 }
-.login:hover{
+
+.login:hover {
     cursor: pointer;
     text-decoration: underline;
     color: #fff;
 }
 
 
-.lupa img{
+.lupa img {
     width: 24px;
     height: 21px;
 }
 
-.lupa{
+.lupa {
     left: 750px;
     position: relative;
     top: 2px;
 }
 
-.lupa:hover{
+.lupa:hover {
     cursor: pointer;
 }
 
-main{
+main {
+    display: flex;
     width: 100%;
+    height: 500px;
     bottom: 0%;
+
 }
 
-.back img{
-   padding-bottom: 0%;
-   height: 560px;
-   width: 100%;
+.back{
+    display: flex;
+    background-attachment: fixed;
+     height: 560px;
+    width: 1360px;
+    z-index: -5;
+    bottom: 0;
+
 }
- 
-.explore{
+.back img {
+   
+    height: 560px;
+    width: 1360px;
+    z-index: -5;
+    bottom: 0;
+
+}
+
+
+.botoes {
+    display: flex;
+    position: relative;
+    gap: 94px;
+    height: 60px;
+    top: 380px;
+    left: -1200px;
+   z-index: inherit;
+}
+
+.explore {
+    position: relative;
     height: 45px;
-    width: 140px;
-    background-color: #ec9440; 
+    width: 150px;
+    background-color: #ec9440;
     border-radius: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family:'Montserrat', sans-serif; 
+    font-family: 'Montserrat', sans-serif;
     color: #ffffff;
     font-size: 16px;
+
+
 }
 
-.reserve{
+.reserve {
+    position: relative;
     display: flex;
     height: 45px;
-    width: 140px;
+    width: 150px;
     background-color: #5A0203;
     border-radius: 50px;
     justify-content: center;
     align-items: center;
-    font-family:'Montserrat', sans-serif; 
-     color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffff;
 
-}  
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    width: 550px;
+
+    position: absolute;
+    top: 250px;
+}
+
+.disc h1 {
+    display: flex;
+    left: 10px;
+    width: 550px;
+}
+
+.title2 h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+}
+
+.pizza {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    width: 600px;
+    height: 400px;
+    left: -1120px;
+    top: 120px;
+}
+.pizza img{
+    width: 500px;
+    height: 400px;
+}
